# visualpathways

./: .env_sample  .gitattributes  .gitignore  CLAUDE.md  README.md  jupytext.toml  pyproject.toml  requirements-lock.txt  requirements.txt
docs/: movies-getting-started.md  python-editors-getting-started.md  reorg_utils.md  repo_reorg.md  repo_reorg_v2.md
gallery_vcbn/: 5-HTPLP01_R.html  ALIN3_R.html  AMMC-A1_R.html  AMMC001_L.html  AMMC002_R.html  AMMC005_R.html  AMMC007_L.html  AMMC007_R.html  AOTU001_L.html  AOTU002_a_R.html  AOTU002_c_R.html  AOTU003_L.html  AOTU005_R.html  AOTU006_R.html  AOTU007_b_R.html  AOTU008_L.html  AOTU008_R.html  AOTU009_R.html  AOTU012_L.html  AOTU013_L.html  AOTU016_c_L.html  AOTU018_R.html  AOTU019_L.html  AOTU019_R.html  AOTU020_R.html  AOTU022_R.html  AOTU024_L.html  AOTU024_R.html  AOTU026_R.html  AOTU029_L.html  AOTU029_R.html  AOTU030_R.html  AOTU033_R.html  AOTU035_L.html  AOTU035_R.html  AOTU036_L.html  AOTU036_R.html  AOTU037_L.html  AOTU038_L.html  AOTU039_R.html  (+2411 more)
gallery_vcbn/pages/: ALIN2_R.html  AMMC002_L.html  AMMC005_L.html  AMMC009_R.html  AMMC013_R.html  AMMC016_L.html  AMMC016_R.html  AMMC017_L.html  AMMC025_R.html  AMMC038_R.html  AN27X013_L.html  AN27X013_R.html  AOTU001_R.html  AOTU002_b_L.html  AOTU002_b_R.html  AOTU003_R.html  AOTU004_L.html  AOTU004_R.html  AOTU005_L.html  AOTU007_L.html  AOTU007_R.html  AOTU007_a_L.html  AOTU007_a_R.html  AOTU007_b_L.html  AOTU011_R.html  AOTU012_R.html  AOTU013_R.html  AOTU014_L.html  AOTU014_R.html  AOTU015_L.html  AOTU015_R.html  AOTU016_a_L.html  AOTU016_a_R.html  AOTU016_b_R.html  AOTU016_c_R.html  AOTU017_L.html  AOTU017_R.html  AOTU018_L.html  AOTU021_R.html  AOTU023_L.html  (+3038 more)
gallery_vpn/: index.html
gallery_vpn/pages/: 5thsLNv_LNd6_R.html  AOTU045_R.html  CL125_R.html  H1_R.html  H2_R.html  HSE_R.html  HSN_R.html  HSS_R.html  HST_R.html  LC10a_R.html  LC10b_R.html  LC10c-1_R.html  LC10c-2_R.html  LC10d_R.html  LC10e_R.html  LC11_R.html  LC12_R.html  LC13_R.html  LC14a-1_R.html  LC14a-2_R.html  LC14b_R.html  LC15_R.html  LC16_R.html  LC17_R.html  LC18_R.html  (+327 more)
params/: LOP_L_col_center_pins.pickle  LOP_col_center_pins.pickle  LO_L_col_center_pins.pickle  LO_col_center_pins.pickle  ME_L_col_center_pins.pickle  ME_L_columnar-cells_location.xlsx  ME_col_center_pins.pickle  Nern-et-al_SuppTable01_Cell-types-and-counts.xlsx  fly_literature_experiments.xlsx  mi1_t4_alignment.xlsx  mi1_t4_alignment_L.xlsx  paper_figs.xlsx
src/: sync-nb.py
(+139 files in other folders)
